--- a/src/main/resources/ch/makery/address/view/PersonOverview.fxml
+++ b/src/main/resources/ch/makery/address/view/PersonOverview.fxml
@@ -6,21 +6,22 @@
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="300.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="300.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.makery.address.view.PersonOverviewController">
    <children>
       <SplitPane dividerPositions="0.3737458193979933" layoutX="209.0" layoutY="106.0" prefHeight="300.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
-                  <TableView layoutX="-25.0" layoutY="25.0" prefHeight="298.0" prefWidth="296.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <TableView fx:id="personTable" layoutX="-25.0" layoutY="25.0" prefHeight="298.0" prefWidth="296.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <columns>
-                      <TableColumn prefWidth="75.0" text="First Name" />
-                      <TableColumn prefWidth="75.0" text="Last Name" />
+                      <TableColumn fx:id="firstNameColumn" prefWidth="75.0" text="First Name" />
+                      <TableColumn fx:id="lastNameColumn" prefWidth="75.0" text="Last Name" />
                     </columns>
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -51,12 +52,12 @@
                         <Label prefHeight="0.0" prefWidth="30.0" text="City" GridPane.rowIndex="3" />
                         <Label prefHeight="17.0" prefWidth="65.0" text="Postal Code" GridPane.rowIndex="4" />
                         <Label prefHeight="17.0" prefWidth="48.0" text="Birthday" GridPane.rowIndex="5" />
-                        <Label prefHeight="0.0" prefWidth="30.0" text="Label" GridPane.columnIndex="1" />
-                        <Label prefHeight="0.0" prefWidth="30.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <Label prefHeight="0.0" prefWidth="30.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                        <Label prefHeight="0.0" prefWidth="30.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                        <Label prefHeight="0.0" prefWidth="30.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                        <Label prefHeight="0.0" prefWidth="30.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                        <Label fx:id="firstNameLabel" prefHeight="0.0" prefWidth="30.0" text="Label" GridPane.columnIndex="1" />
+                        <Label fx:id="lastNameLabel" prefHeight="0.0" prefWidth="30.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <Label fx:id="streetLabel" prefHeight="0.0" prefWidth="30.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <Label fx:id="cityLabel" prefHeight="0.0" prefWidth="30.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                        <Label fx:id="postalCodeLabel" prefHeight="0.0" prefWidth="30.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                        <Label fx:id="birthdayLabel" prefHeight="0.0" prefWidth="30.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="5" />
                      </children>
                   </GridPane>
                   <ButtonBar AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="5.0">
@@ -66,6 +67,7 @@
                         <Button mnemonicParsing="false" text="Delete" />
                      </buttons>
                   </ButtonBar>
+                  <TextField fx:id="mytext" layoutX="12.0" layoutY="226.0" />
                </children>
             </AnchorPane>
         </items>
