--- a/src/main/resources/ch/makery/address/view/PersonOverview.fxml
+++ b/src/main/resources/ch/makery/address/view/PersonOverview.fxml
@@ -62,8 +62,8 @@
                   </GridPane>
                   <ButtonBar AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="5.0">
                      <buttons>
-                        <Button mnemonicParsing="false" text="New" />
-                        <Button mnemonicParsing="false" text="Edit" />
+                        <Button mnemonicParsing="false" onAction="#handleNewPerson" text="New" />
+                        <Button mnemonicParsing="false" onAction="#handleEditPerson" text="Edit" />
                         <Button mnemonicParsing="false" onAction="#handleDeletePerson" text="Delete" />
                      </buttons>
                   </ButtonBar>
