--- a/src/main/resources/ch/makery/address/view/PersonOverview.fxml
+++ b/src/main/resources/ch/makery/address/view/PersonOverview.fxml
@@ -14,11 +14,11 @@
 
 <AnchorPane prefHeight="300.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.makery.address.view.PersonOverviewController">
    <children>
-      <SplitPane dividerPositions="0.3737458193979933" layoutX="209.0" layoutY="106.0" prefHeight="300.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <SplitPane dividerPositions="0.3737458193979933" layoutX="209.0" layoutY="106.0" prefHeight="300.0" prefWidth="600.0" stylesheets="@DarkTheme.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
-                  <TableView fx:id="personTable" layoutX="-25.0" layoutY="25.0" prefHeight="298.0" prefWidth="296.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <TableView fx:id="personTable" layoutX="-25.0" layoutY="25.0" prefHeight="298.0" prefWidth="296.0" stylesheets="@DarkTheme.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <columns>
                       <TableColumn fx:id="firstNameColumn" prefWidth="75.0" text="First Name" />
                       <TableColumn fx:id="lastNameColumn" prefWidth="75.0" text="Last Name" />
@@ -29,10 +29,10 @@
                   </TableView>
                </children>
             </AnchorPane>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" styleClass="background" stylesheets="@DarkTheme.css">
                <children>
-                  <Label layoutX="36.0" layoutY="72.0" prefHeight="18.0" prefWidth="87.0" text="Person Details:" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0" />
-                  <GridPane layoutX="38.0" layoutY="97.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="30.0">
+                  <Label layoutX="36.0" layoutY="72.0" prefHeight="54.0" prefWidth="276.0" styleClass="label-header" text="Person Details:" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0" />
+                  <GridPane layoutX="38.0" layoutY="97.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="60.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -50,24 +50,24 @@
                         <Label text="Last Name" GridPane.rowIndex="1" />
                         <Label prefHeight="17.0" prefWidth="38.0" text="Street" GridPane.rowIndex="2" />
                         <Label prefHeight="0.0" prefWidth="30.0" text="City" GridPane.rowIndex="3" />
-                        <Label prefHeight="17.0" prefWidth="65.0" text="Postal Code" GridPane.rowIndex="4" />
-                        <Label prefHeight="17.0" prefWidth="48.0" text="Birthday" GridPane.rowIndex="5" />
-                        <Label fx:id="firstNameLabel" prefHeight="0.0" prefWidth="30.0" text="Label" GridPane.columnIndex="1" />
-                        <Label fx:id="lastNameLabel" prefHeight="0.0" prefWidth="30.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <Label fx:id="streetLabel" prefHeight="0.0" prefWidth="30.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                        <Label fx:id="cityLabel" prefHeight="0.0" prefWidth="30.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                        <Label fx:id="postalCodeLabel" prefHeight="0.0" prefWidth="30.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                        <Label fx:id="birthdayLabel" prefHeight="0.0" prefWidth="30.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                        <Label prefHeight="17.0" prefWidth="97.0" text="Postal Code" GridPane.rowIndex="4" />
+                        <Label prefHeight="17.0" prefWidth="73.0" text="Birthday" GridPane.rowIndex="5" />
+                        <Label fx:id="firstNameLabel" prefHeight="17.0" prefWidth="40.0" styleClass="label-bright" text="Label" GridPane.columnIndex="1" />
+                        <Label fx:id="lastNameLabel" prefHeight="17.0" prefWidth="38.0" styleClass="label-bright" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <Label fx:id="streetLabel" prefHeight="17.0" prefWidth="38.0" styleClass="label-bright" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <Label fx:id="cityLabel" prefHeight="17.0" prefWidth="35.0" styleClass="label-bright" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                        <Label fx:id="postalCodeLabel" prefHeight="17.0" prefWidth="36.0" styleClass="label-bright" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                        <Label fx:id="birthdayLabel" prefHeight="17.0" prefWidth="37.0" styleClass="label-bright" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="5" />
                      </children>
                   </GridPane>
                   <ButtonBar AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="5.0">
                      <buttons>
-                        <Button mnemonicParsing="false" onAction="#handleNewPerson" text="New" />
+                        <Button mnemonicParsing="false" onAction="#handleNewPerson" stylesheets="@DarkTheme.css" text="New" />
                         <Button mnemonicParsing="false" onAction="#handleEditPerson" text="Edit" />
                         <Button mnemonicParsing="false" onAction="#handleDeletePerson" text="Delete" />
                      </buttons>
                   </ButtonBar>
-                  <TextField fx:id="mytext" layoutX="12.0" layoutY="226.0" />
+                  <TextField fx:id="mytext" layoutX="9.0" layoutY="238.0" prefHeight="31.0" prefWidth="62.0" styleClass="background" stylesheets="@DarkTheme.css" />
                </children>
             </AnchorPane>
         </items>
