--- a/src/main/resources/ch/makery/address/view/RootLayout.fxml
+++ b/src/main/resources/ch/makery/address/view/RootLayout.fxml
@@ -20,12 +20,15 @@
           </Menu>
           <Menu mnemonicParsing="false" text="_Edit">
             <items>
-              <MenuItem mnemonicParsing="false" text="Delete" />
+              <MenuItem mnemonicParsing="false" text="Delete">
+                     <accelerator>
+                        <KeyCodeCombination alt="UP" code="D" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
+                     </accelerator></MenuItem>
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Help">
             <items>
-              <MenuItem mnemonicParsing="false" text="About" />
+              <MenuItem mnemonicParsing="false" onAction="#handleDelete" text="About" />
             </items>
           </Menu>
         </menus>
